Fixed too large view

--- a/app/assets/stylesheets/problems.scss
+++ b/app/assets/stylesheets/problems.scss
@@ -172,6 +172,7 @@ div.edit-collections {
 }
 
 .question {
+  font-size: 110%;
   margin-left: 5px;
 }
 .entrys {
@@ -179,17 +180,18 @@ div.edit-collections {
 }
 
 .entrybox {
-  padding: 3px;
-  margin: 3px;
+  padding: 5px;
+  margin: 5px;
   border-radius: 5px;
-  border: 1px solid grey;
+  border: 1px solid lightgrey;
   width: 500px;
   //display: inline;
 
 }
 //
 p.entrytext{
-  width: 600px;
+  width: 700px;
+  margin-left: 5px;
   display: inline;
   font-weight: normal !important;
   //white-space: pre-wrap;
@@ -219,6 +221,6 @@ p.entrytext{
   position: absolute;
   padding: 4px;
   border: 2px double grey;
-  font-size: 150%;
+  font-size: 120%;
   background-color: antiquewhite;
 }
